# advent_of_code_2024

./: .gitignore  CMakeLists.txt
inputs/: day1.h  day19.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h
js/day1/: quick.js
src/day1/: CMakeLists.txt  main.cpp
src/day19/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  main.cpp
src/day3/: CMakeLists.txt  main.cpp
src/day4/: CMakeLists.txt  main.cpp
src/day5/: CMakeLists.txt  main.cpp
src/day6/: CMakeLists.txt  main.cpp
src/day7/: CMakeLists.txt  main.cpp
src/day8/: CMakeLists.txt  main.cpp
utilities/: common.h
